--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,6 +10,8 @@ add_executable(l0 "src/L0/main.cc" "src/L0/l0.cc" "src/L0/l0.hpp")
 add_executable(noise "src/utils/add_noise.cc")
 add_executable(metrics "src/utils/metrics.cc" "src/L0/l0.cc")
 add_executable(l1_smooth "src/L1CS/smooth.cc" "src/L1CS/smooth.hpp" )
+
+add_executable(bilateral "src/bilateral/main.cc")
 #add_executable(noise "src/add_noise.cc")
 #add_executable(L0min "src/minimal.cc")
 #add_executable(c2 "src/smooth.cc")
