--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -13,6 +13,7 @@ add_executable(l1_smooth "src/L1CS/smooth.cc" "src/L1CS/smooth.hpp" )
 
 add_executable(bilateral "src/bilateral/main.cc")
 add_executable(bilateral-norm "src/bilateral/main2.cc")
+add_executable(bilateral-guide "src/bilateral/main3.cc")
 #add_executable(noise "src/add_noise.cc")
 #add_executable(L0min "src/minimal.cc")
 #add_executable(c2 "src/smooth.cc")
