add iter experiment

--- a/.gitignore
+++ b/.gitignore
@@ -14,6 +14,7 @@ bash/*
 !bash/test_ir.bat
 !bash/test_robust.bat
 !bash/cuda.bat
+!bash/test_iter.bat
 
 scripts/__pycache__
 # use to produce my own graduation paper's figures
